# atomic-option-cell

./: Cargo.toml  README.md
src/: atomics.rs  fallback.rs  lib.rs
