[package]
name = "atomic-option-cell"
version = "0.1.0"
authors = ["Daniel.Bloom <daniel.bloom@dfinity.org>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["thread", "atomic", "option", "cell"]
categories = ["concurrency", "data-structures", "no-std"]
description = "A nullable atomic cell which can run lock-free"

[features]
default = ["std"]
std = ["lazy_static"]

[dependencies]
lazy_static = { version = "1.4.0", optional = true }
array-macro = "2.1.0"
